<resources>
    <string name="app_name">DogVacayProject</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="browse">Browse</string>
    <string name="user_name">User Name</string>
    <string name="default_choose_place">All sitters near</string>
    <string name="default_choose_date">Choose dates</string>
    <string name="google_map_key">AIzaSyAirUwlax9iKUbeVtsl7rRC7Ek0l9LE8qI</string>
    <string name="default_content_description">Image</string>
    <string name="prev_20">PREV 20</string>
    <string name="redo_search">Redo Search</string>
    <string name="next_20">NEXT 20</string>
    <string name="filter_host">FILTER</string>
    <string name="looking_for">I\'m looking for ...</string>
    <string name="all_sitter">All sitters</string>
    <string name="any_service">Any service</string>
    <string name="boarding">Boarding</string>
    <string name="boarding_details">Overnight at sitter\'s home</string>
    <string name="sitting">Sitting</string>
    <string name="sitting_detail">Overnight in your home</string>
    <string name="daycare">Daycare</string>
    <string name="daycare_detail">Sitter\'s home,no overnight</string>
</resources>
