<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_choose_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_back_toolbar_choose_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigation_arrow_back"
                android:background="?selectableItemBackground"
                android:layout_centerVertical="true"/>
            <com.example.asus.dogvacayproject.view.ClearableEditText
                android:id="@+id/clearable_edittext_search_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_back_toolbar_choose_place"
                android:drawableRight="@drawable/bs_ic_clear"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ListView
        android:id="@+id/lvChoosePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
    <LinearLayout
        android:id="@+id/layout_looking_for_choose_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvImLookingFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/looking_for"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            />
        <RelativeLayout
            android:id="@+id/looking_all_sitter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_looking_all_sitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bone"/>
            <TextView
                android:id="@+id/tvAllSitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_sitter"
                android:layout_toRightOf="@id/img_looking_all_sitter"
                android:layout_alignTop="@id/img_looking_all_sitter"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />
            <TextView
                android:id="@+id/tvAllSitter_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/any_service"
                android:layout_toRightOf="@id/img_looking_all_sitter"
                android:layout_below="@id/tvAllSitter"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/darker_gray"/>
            <RadioButton
                android:id="@+id/radio_choose_all_sitters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </RelativeLayout>
        <include layout="@layout/cardview_divider_layout" />
        <RelativeLayout
            android:id="@+id/boarding_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_looking_boarding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/service_boarding"/>
            <TextView
                android:id="@+id/tvboarding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boarding"
                android:layout_toRightOf="@id/img_looking_boarding"
                android:layout_alignTop="@id/img_looking_boarding"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />
            <TextView
                android:id="@+id/tvboarding_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boarding_details"
                android:layout_toRightOf="@id/img_looking_boarding"
                android:layout_below="@id/tvboarding"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/darker_gray"/>
            <RadioButton
                android:id="@+id/radio_choose_boarding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </RelativeLayout>
        <include layout="@layout/cardview_divider_layout" />
        <RelativeLayout
            android:id="@+id/sitting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_looking_sitting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/service_sitting"/>
            <TextView
                android:id="@+id/tvsitting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sitting"
                android:layout_toRightOf="@id/img_looking_sitting"
                android:layout_alignTop="@id/img_looking_sitting"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />
            <TextView
                android:id="@+id/tvsitting_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sitting_detail"
                android:layout_toRightOf="@id/img_looking_sitting"
                android:layout_below="@id/tvsitting"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/darker_gray"/>
            <RadioButton
                android:id="@+id/radio_choose_sitting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </RelativeLayout>
        <include layout="@layout/cardview_divider_layout" />
        <RelativeLayout
            android:id="@+id/daycare_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_looking_daycare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/service_daycare"/>
            <TextView
                android:id="@+id/tvdaycare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daycare"
                android:layout_toRightOf="@id/img_looking_daycare"
                android:layout_alignTop="@id/img_looking_daycare"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />
            <TextView
                android:id="@+id/tvdaycare_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daycare_detail"
                android:layout_toRightOf="@id/img_looking_daycare"
                android:layout_below="@id/tvdaycare"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/darker_gray"/>
            <RadioButton
                android:id="@+id/radio_choose_daycare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </RelativeLayout>
        <include layout="@layout/cardview_divider_layout" />
    </LinearLayout>
</LinearLayout>